--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -1,15 +1,18 @@
 .container {
-  h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 6rem;
-    transform: translate(-50%, -50%);
-    margin: 0;
-    padding: 0;
-    display: inline-block;
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 30px;
+  grid-template-areas: "code code" "tabs tabs";
+  min-height: 100vh;
+  width: 100%;
+}
+
+.codeWrapper {
+  grid-area: code;
+  background: #1b1b2f;
+}
+
+.tabsWrapper {
+  grid-area: tabs;
+  background: #162447;
 }
